--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -2,6 +2,7 @@
 
 {% block title %}注册{% endblock %}
 {% block head %}
+<script src="{{ url_for('static', filename='js/common/message-toast.js') }}" defer></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/account/register.css') }}">
 <script src="{{ url_for('static', filename='js/account/register.js') }}" defer></script>
 {% endblock %}
