修复更多新闻问题

--- a/templates/house/house_list.html
+++ b/templates/house/house_list.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/house/house_list.css') }}">
+<script src="{{ url_for('static', filename='js/common/message-toast.js') }}"></script>
 <script src="{{ url_for('static', filename='js/house/show-news.js') }}"></script>
 {% endblock %}
 
